Fixing label visibility for MSF contact section and sliding in a offcanvas color change.

--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -49,5 +49,6 @@ $base-heading-font-weight: 700;
 $navbar-background: $inverse-global-color;
 
 // Overriding offcanvas bar defaults.
+$offcanvas-bar-background: $monet-white;
 $offcanvas-bar-color-mode: none;
 $offcanvas-bar-width: 340px;
